UI (app): fix tooltip disappearing behind the ads container

--- a/core/src/css/component/battlegrounds/post-match/bgs-chart-hp.component.scss
+++ b/core/src/css/component/battlegrounds/post-match/bgs-chart-hp.component.scss
@@ -207,6 +207,10 @@
 				font-weight: bold;
 			}
 
+			.body {
+				flex-direction: column;
+			}
+
 			.line {
 				display: flex;
 				align-items: center;
